# rust-graphic-lib

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: Cargo.toml  lib.rs  main.rs
src/geometric/: circle2d.rs  ellipse2d.rs  geometric.rs  line2d.rs  mod.rs  point2d.rs  triangle2d.rs
src/graphic/: matrix.rs  mod.rs  renderer.rs  two_dimensional_transformation.rs
